try to fix horizontal scroll

--- a/src/components/layout.scss
+++ b/src/components/layout.scss
@@ -26,7 +26,7 @@ body {
 
 #logo-holder {
   margin-left: 0.3rem;
-  @media (min-width: 480px) {
+  @media (min-width: 570px) {
     margin: 0;
   }
 }
@@ -36,13 +36,18 @@ body {
   margin: 0 0 0 0;
 
   //goes away once it goes under 480px
-  @media (min-width: 480px) {
+  @media (min-width: 570px) {
     width: 2.5rem;
   }
 }
 
-#navbar-links {
-  @media (min-width: 550px) {
+#navbar-links { 
+  @media (min-width: 570px) {
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-end;
     flex-wrap: wrap;
   }
 }
